--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -143,6 +143,7 @@
     "terminal.integrated.fontSize": 18,
     "terminal.integrated.enableMultiLinePasteWarning": false,
     "terminal.integrated.fontWeight": "600",
+    "terminal.integrated.copyOnSelection": true,
     /************************************** TERMINAL ***************************************/
 
 
