vscode: change comment

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -134,7 +134,7 @@
     },
     "debug.console.fontSize": 18,
     "debug.toolBarLocation": "hidden",
-    /*************************************** COMPILE ***************************************/
+    /**************************************** C/CPP ****************************************/
 
 
 
