--- a/docker/doris/docker-compose.yaml
+++ b/docker/doris/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     container_name: doris
     image:
       doris-image
-    restart: always
+    #restart: always
     build:
       context: ./
       dockerfile: Dockerfile
