--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -28,8 +28,8 @@ set-window-option -g mode-keys vi
 # Start windows and panes at 1, not 0
 set-option -g base-index 1
 
-# Set C-f as prefix
-set-option -g prefix C-f
+# Set C-\ as prefix
+set-option -g prefix C-\\
 
 # Set default shell
 set-option -g default-shell /bin/bash
@@ -38,7 +38,7 @@ set-option -g default-shell /bin/bash
 # Status bar:
 
 set-option -g status-position top
-set-option -g status-justify centre
+set-option -g status-justify left 
 
 set-option -g status-bg default
 set-option -g status-fg yellow
@@ -53,7 +53,8 @@ set-option -g pane-border-style fg=colour241
 set-option -g status-left ''
 set-option -g status-right ''
 
-set -g mode-mouse on
+set -g status-left-length 20
+set -g status-left "   "
 
 # --------------------------------------------------------
 # Key bindings:
@@ -65,7 +66,7 @@ unbind-key -a -T copy-mode
 unbind-key -a -T copy-mode-vi
 
 # Reload tmux configuration
-bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "configuration reloaded"
+bind-key C-r source-file ~/.config/tmux/tmux.conf \; display-message "configuration reloaded"
 
 # Create new windows, new windows start in current directory
 bind-key n new-window -c "#{pane_current_path}"
@@ -88,7 +89,7 @@ bind-key -T copy-mode-vi j send-keys -X scroll-down
 bind-key -T copy-mode-vi g send-keys -X history-top
 bind-key -T copy-mode-vi G send-keys -X history-bottom
 bind-key -T copy-mode-vi / command-prompt -p "(search up)" "send -X search-backward \"%%%\""
-# bind-key -T copy-mode-vi ? command-prompt -p "(search down)" "send -X search-forward \"%%%\""
+bind-key -T copy-mode-vi ? command-prompt -p "(search down)" "send -X search-forward \"%%%\""
 bind-key -T copy-mode-vi n send-keys -X search-forward
 bind-key -T copy-mode-vi N send-keys -X search-backward
 
@@ -100,20 +101,20 @@ bind-key j select-pane -D
 bind-key Space last-pane
 
 # Rotate windows
-#bind-key C-o rotate-window -D
+bind-key r rotate-window -D
 
 # Detach
-#bind-key d detach-client
+bind-key d detach-client
 
 # Resize active pane
 bind-key Left resize-pane -L 1
 bind-key Right resize-pane -R 1
 bind-key Up resize-pane -U 1
 bind-key Down resize-pane -D 1
-bind-key H resize-pane -L 10
-bind-key L resize-pane -R 10
-bind-key K resize-pane -U 10
-bind-key J resize-pane -D 10
+bind-key H resize-pane -L 1
+bind-key L resize-pane -R 1
+bind-key K resize-pane -U 1
+bind-key J resize-pane -D 1
 
 
 # Maximize (zoom) current pane
