feat: change nvim keybindings

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -32,7 +32,7 @@ set-option -g base-index 1
 set-option -g prefix C-\\
 
 # Set default shell
-set-option -g default-shell /bin/bash
+set-option -g default-shell /bin/zsh
 
 # --------------------------------------------------------
 # Status bar:
