feat: nvim remove unused plugins

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -42,7 +42,7 @@ set-option -g status-justify left
 
 set-option -g status-bg default
 set-option -g status-fg yellow
-set-option -g status-style bg=colour0
+set-option -g status-style bg=#1f2329
 
 set-option -g window-status-style bg=default,fg=grey
 set-option -g window-status-current-style bg=default,fg=orange
@@ -66,7 +66,7 @@ unbind-key -a -T copy-mode
 unbind-key -a -T copy-mode-vi
 
 # Reload tmux configuration
-bind-key C-r source-file ~/.config/tmux/tmux.conf \; display-message "configuration reloaded"
+bind-key C-r source-file ~/.tmux.conf \; display-message "configuration reloaded"
 
 # Create new windows, new windows start in current directory
 bind-key n new-window -c "#{pane_current_path}"
