--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -1,38 +1,32 @@
-## Colors (Aura Theme)
+# Colors (One Dark)
+
 #colors:
-#  # Default colors
 #  primary:
 #    background: '#1f2329'
-#    foreground: '#abb2bf'
+#    foreground: '#cacccf'
 #
 #  cursor:
 #    cursor: '#a277ff'
 #
-#  selection:
-#    #text: CellForeground
-#    background: '#a1a1a6'
-#
-#  # Normal colors
 #  normal:
-#    black: '#110f18'
-#    red: '#ff6767'
-#    green: '#61ffca'
-#    yellow: '#ffca85'
-#    blue: '#a277ff'
-#    magenta: '#a277ff'
-#    cyan: '#61ffca'
-#    white: '#edecee'
+#    black: '#1e2127'
+#    red: '#e06c75'
+#    green: '#98c379'
+#    yellow: '#d19a66'
+#    blue: '#61afef'
+#    magenta: '#c678dd'
+#    cyan: '#56b6c2'
+#    white: '#abb2bf'
 #
-#  # Bright colors
 #  bright:
-#    black: '#4d4d4d'
-#    red: '#ff6767'
-#    green: '#61ffca'
-#    yellow: '#ffca85'
-#    blue: '#a277ff'
-#    magenta: '#a277ff'
-#    cyan: '#61ffca'
-#    white: '#edecee'
+#    black: '#5c6370'
+#    red: '#e06c75'
+#    green: '#98c379'
+#    yellow: '#d19a66'
+#    blue: '#61afef'
+#    magenta: '#c678dd'
+#    cyan: '#56b6c2'
+#    white: '#ffffff'
 #
 #  search:
 #    matches:
@@ -42,35 +36,36 @@
 #      foreground: '#ffffff'
 #      background: '#9F7AF5'
 
-# Colors (One Dark)
 
+        # Colors (Github Light)
+        
 colors:
   primary:
-    background: '#1f2329'
-    foreground: '#cacccf'
+    background: '#fafafa'
+    foreground: '#000000'
 
   cursor:
     cursor: '#a277ff'
 
   normal:
-    black: '#1e2127'
-    red: '#e06c75'
-    green: '#98c379'
-    yellow: '#d19a66'
-    blue: '#61afef'
-    magenta: '#c678dd'
-    cyan: '#56b6c2'
-    white: '#abb2bf'
+    black: '#000000'
+    red: '#d71e00'
+    green: '#457d00'
+    yellow: '#cfad00'
+    blue: '#417ab3'
+    magenta: '#88658d'
+    cyan: '#209fa1'
+    white: '#dbded8'
 
   bright:
-    black: '#5c6370'
-    red: '#e06c75'
-    green: '#98c379'
-    yellow: '#d19a66'
-    blue: '#61afef'
-    magenta: '#c678dd'
-    cyan: '#56b6c2'
-    white: '#ffffff'
+    black: '#676965'
+    red: '#da1e11'
+    green: '#3a7c0f'
+    yellow: '#908530'
+    blue: '#23629d'
+    magenta: '#af2f9e'
+    cyan: '#148182'
+    white: '#f1f1ef'
 
   search:
     matches:
@@ -94,7 +89,7 @@ font:
     family: 'JetBrainsMono Nerd Font'
     style: Italic
 
-  size: 14.0
+  size: 14.5
 
   offset:
     x: 0
@@ -104,7 +99,7 @@ font:
     y: 0
 
 window:
-  startup_mode: SimpleFullscreen
+  #startup_mode: SimpleFullscreen
   decorations: none
 
 scrolling:
@@ -115,12 +110,12 @@ selection:
   semantic_escape_chars: ',│`|:"'' ()[]{}<>'
   save_to_clipboard: true
 
-shell:
-  program: /bin/bash
-  args:
-    - --login
-    - -c
-    - "tmux new-session -A -D -s main"
+    #shell:
+  #  program: /bin/bash
+  #  args:
+  #    - --login
+  #    - -c
+  #    - "tmux new-session -A -D -s main"
 
 live_config_reload: true
 
@@ -193,4 +188,7 @@ key_bindings:
 
   # ----- max pane -----
   - { key: m,       mods: Command,        chars: "\x1cm"    }
+
+  - { key: t,  mods: Command, action: CreateNewWindow }
+
 
