--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -32,7 +32,7 @@ set-option -g base-index 1
 set-option -g prefix C-\\
 
 # Set default shell
-set-option -g default-shell /bin/zsh
+set-option -g default-shell /bin/bash
 
 # --------------------------------------------------------
 # Status bar:
@@ -42,9 +42,9 @@ set-option -g status-justify left
 
 set-option -g status-bg default
 set-option -g status-fg yellow
-set-option -g status-style bg=#1f2329
+set-option -g status-style bg=#fafafa
 
-set-option -g window-status-style bg=default,fg=grey
+set-option -g window-status-style bg=default,fg=black
 set-option -g window-status-current-style bg=default,fg=orange
 
 set-option -g pane-active-border-style fg=colour250
@@ -54,7 +54,7 @@ set-option -g status-left ''
 set-option -g status-right ''
 
 set -g status-left-length 20
-set -g status-left "   "
+set -g status-left " "
 
 # --------------------------------------------------------
 # Key bindings:
