--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -42,9 +42,9 @@ set-option -g status-justify left
 
 set-option -g status-bg default
 set-option -g status-fg yellow
-set-option -g status-style bg=#fafafa
+set-option -g status-style bg=#1A1D23
 
-set-option -g window-status-style bg=default,fg=black
+set-option -g window-status-style bg=default,fg=grey
 set-option -g window-status-current-style bg=default,fg=orange
 
 set-option -g pane-active-border-style fg=colour250
