--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -76,7 +76,8 @@ bind-key n new-window -c "#{pane_current_path}"
 
 # Split pane vertically and horizontally, new panes start in current directory
 bind-key = splitw -h -c "#{pane_current_path}"
-bind-key - splitw -v -p 30 -c "#{pane_current_path}"
+#bind-key - splitw -v -p 30 -c "#{pane_current_path}"
+bind-key - splitw -v -c "#{pane_current_path}"
 
 # Enter copy mode by c, leave copy mode by q, movements and search in copy mode
 #bind-key Escape copy-mode
