--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -49,7 +49,7 @@ font:
     family: 'JetBrainsMono Nerd Font'
     style: Italic
 
-  size: 14
+  size: 13.5
 
   offset:
     x: 0
@@ -59,7 +59,7 @@ font:
     y: 0
 
 window:
-  #startup_mode: SimpleFullscreen
+  startup_mode: SimpleFullscreen
   #decorations: none
   decorations: buttonless
 
