--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -42,10 +42,11 @@ set-option -g status-justify left
 
 set-option -g status-bg default
 set-option -g status-fg yellow
-set-option -g status-style bg=#1A1D23
+#set-option -g status-style bg=#1A1D23
+set-option -g status-style bg=#f4f4f4
 
-set-option -g window-status-style bg=default,fg=grey
-set-option -g window-status-current-style bg=default,fg=orange
+set-option -g window-status-style bg=default,fg=black
+set-option -g window-status-current-style bg=default,fg=green
 
 set-option -g pane-active-border-style fg=colour250
 set-option -g pane-border-style fg=colour241
@@ -108,10 +109,10 @@ bind-key r rotate-window -D
 bind-key d detach-client
 
 # Resize active pane
-bind-key Left resize-pane -L 1
-bind-key Right resize-pane -R 1
-bind-key Up resize-pane -U 1
-bind-key Down resize-pane -D 1
+bind-key Left resize-pane -L 5
+bind-key Right resize-pane -R 5
+bind-key Up resize-pane -U 5
+bind-key Down resize-pane -D 5
 bind-key H resize-pane -L 1
 bind-key L resize-pane -R 1
 bind-key K resize-pane -U 1
