--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -43,7 +43,7 @@ set-option -g status-justify left
 set-option -g status-bg default
 set-option -g status-fg yellow
 #set-option -g status-style bg=#1A1D23
-set-option -g status-style bg=#f4f4f4
+set-option -g status-style bg=#f8f8f8
 
 set-option -g window-status-style bg=default,fg=black
 set-option -g window-status-current-style bg=default,fg=green
@@ -81,19 +81,24 @@ bind-key = splitw -h -c "#{pane_current_path}"
 bind-key - splitw -v -c "#{pane_current_path}"
 
 # Enter copy mode by c, leave copy mode by q, movements and search in copy mode
-#bind-key Escape copy-mode
 bind-key c copy-mode
 bind-key -T copy-mode-vi q send-keys -X cancel
 bind-key -T copy-mode-vi [ send-keys -X halfpage-up
 bind-key -T copy-mode-vi ] send-keys -X halfpage-down
 bind-key -T copy-mode-vi k send-keys -X scroll-up
 bind-key -T copy-mode-vi j send-keys -X scroll-down
+bind-key -T copy-mode-vi h send-keys -X cursor-left
+bind-key -T copy-mode-vi l send-keys -X cursor-right
 bind-key -T copy-mode-vi g send-keys -X history-top
 bind-key -T copy-mode-vi G send-keys -X history-bottom
 bind-key -T copy-mode-vi / command-prompt -p "(search up)" "send -X search-backward \"%%%\""
 bind-key -T copy-mode-vi ? command-prompt -p "(search down)" "send -X search-forward \"%%%\""
 bind-key -T copy-mode-vi n send-keys -X search-forward
 bind-key -T copy-mode-vi N send-keys -X search-backward
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi C-v send -X rectangle-toggle
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel
+bind-key -T copy-mode-vi Escape send -X clear-selection
 
 # Switch active panes
 bind-key h select-pane -L
