--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -42,11 +42,12 @@ set-option -g status-justify left
 
 set-option -g status-bg default
 set-option -g status-fg yellow
-#set-option -g status-style bg=#1A1D23
-set-option -g status-style bg=#f8f8f8
+set-option -g status-style bg=#1A1D23
+#set-option -g status-style bg=#f8f8f8
 
-set-option -g window-status-style bg=default,fg=black
-set-option -g window-status-current-style bg=default,fg=green
+set-option -g window-status-style bg=default,fg=grey
+set-option -g window-status-current-style bg=default,fg=orange
+#set-option -g window-status-current-style bg=default,fg=green
 
 set-option -g pane-active-border-style fg=colour250
 set-option -g pane-border-style fg=colour241
@@ -77,7 +78,6 @@ bind-key n new-window -c "#{pane_current_path}"
 
 # Split pane vertically and horizontally, new panes start in current directory
 bind-key = splitw -h -c "#{pane_current_path}"
-#bind-key - splitw -v -p 30 -c "#{pane_current_path}"
 bind-key - splitw -v -c "#{pane_current_path}"
 
 # Enter copy mode by c, leave copy mode by q, movements and search in copy mode
