--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -34,6 +34,9 @@ set-option -g prefix C-\\
 # Set default shell
 set-option -g default-shell /bin/bash
 
+# Forbidden pop-up window
+set-option -g remain-on-exit off
+
 # --------------------------------------------------------
 # Status bar:
 
