--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -65,8 +65,8 @@ set -g status-left " "
 # Unbind all keys in all 'key tables' to start with a clean slate (to verify, run 'tmux list-keys')
 unbind-key -a -T prefix
 unbind-key -a -T root
-unbind-key -a -T copy-mode
-unbind-key -a -T copy-mode-vi
+#unbind-key -a -T copy-mode
+#unbind-key -a -T copy-mode-vi
 
 # Reload tmux configuration
 bind-key C-r source-file ~/.tmux.conf \; display-message "configuration reloaded"
