--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -122,7 +122,7 @@ live_config_reload: true
 # Run "xxd -psd" to find hex codes of keys.
 #
 # Alacritty + Tmux key integratio
-#   `\x1c` is `C-\` as tmux prefix
+#   `\x02` is `C-b` as tmux prefix
 #   `\x1b` is `Esc`
 key_bindings:
   - { key: H,        mods: Command,       action: None }
@@ -134,49 +134,49 @@ key_bindings:
   - { key: Minus,    mods: Command,       action: DecreaseFontSize }
 
   # ----- new pane/tab/window -----
-  - { key: D,        mods: Command,       chars: "\x1c="    } # new vertical pane with default shell
-  - { key: D,        mods: Command|Shift, chars: "\x1c-"    } # new vertical pane with commands menu
-  - { key: N,        mods: Command,       chars: "\x1cn"    } # new tab with default shell
+  - { key: D,        mods: Command,       chars: "\x02="    } # new vertical pane with default shell
+  - { key: D,        mods: Command|Shift, chars: "\x02-"    } # new vertical pane with commands menu
+  - { key: N,        mods: Command,       chars: "\x02n"    } # new tab with default shell
 
   # ----- close pane/tab/window -----
-  - { key: W,        mods: Command,       chars: "\x1cx"    } # close the pane
-  - { key: W,        mods: Command|Shift, chars: "\x1cX"    } # close the tab
-  - { key: Q,        mods: Command,       chars: "\x1cd"    } # close the window
+  - { key: W,        mods: Command,       chars: "\x02x"    } # close the pane
+  - { key: W,        mods: Command|Shift, chars: "\x02X"    } # close the tab
+  - { key: Q,        mods: Command,       chars: "\x02d"    } # close the window
 
   # ----- copy mode -----
-  - { key: Y,        mods: Command       , chars: "\x1cc"   } # enter vi copy mode, and search from up to down
+  - { key: Y,        mods: Command       , chars: "\x02c"   } # enter vi copy mode, and search from up to down
 
   # ----- navigate panes -----
-  - { key: H,        mods: Command,       chars: "\x1ch"    } # go to the pane left
-  - { key: J,        mods: Command,       chars: "\x1cj"    } # go to the pane above
-  - { key: K,        mods: Command,       chars: "\x1ck"    } # go to the pane below
-  - { key: L,        mods: Command,       chars: "\x1cl"    } # go to the pane right
+  - { key: H,        mods: Command,       chars: "\x02h"    } # go to the pane left
+  - { key: J,        mods: Command,       chars: "\x02j"    } # go to the pane above
+  - { key: K,        mods: Command,       chars: "\x02k"    } # go to the pane below
+  - { key: L,        mods: Command,       chars: "\x02l"    } # go to the pane right
 
   # ----- resize panes -----
-  - { key: H,        mods: Command|Shift, chars: "\x1cH"         } # resize the current pane left
-  - { key: J,        mods: Command|Shift, chars: "\x1cJ"         } # resize the current pane above
-  - { key: K,        mods: Command|Shift, chars: "\x1cK"         } # resize the current pane below
-  - { key: L,        mods: Command|Shift, chars: "\x1cL"         } # resize the current pane right
-  - { key: Left,     mods: Command|Shift, chars: "\x1c\x1b[D"    }
-  - { key: Down,     mods: Command|Shift, chars: "\x1c\x1b[B"    }
-  - { key: Up,       mods: Command|Shift, chars: "\x1c\x1b[A"    }
-  - { key: Right,    mods: Command|Shift, chars: "\x1c\x1b[C"    }
+  - { key: H,        mods: Command|Shift, chars: "\x02H"         } # resize the current pane left
+  - { key: J,        mods: Command|Shift, chars: "\x02J"         } # resize the current pane above
+  - { key: K,        mods: Command|Shift, chars: "\x02K"         } # resize the current pane below
+  - { key: L,        mods: Command|Shift, chars: "\x02L"         } # resize the current pane right
+  - { key: Left,     mods: Command|Shift, chars: "\x02\x1b[D"    }
+  - { key: Down,     mods: Command|Shift, chars: "\x02\x1b[B"    }
+  - { key: Up,       mods: Command|Shift, chars: "\x02\x1b[A"    }
+  - { key: Right,    mods: Command|Shift, chars: "\x02\x1b[C"    }
 
   # ----- navigate tabs -----
-  - { key: i,        mods: Command,       chars: "\x1ci"    } # go to previous tab
-  - { key: o,        mods: Command,       chars: "\x1co"    } # go to next tab
-  - { key: Key1,     mods: Command,       chars: "\x1c1"    } # go to tab 1..9
-  - { key: Key2,     mods: Command,       chars: "\x1c2"    }
-  - { key: Key3,     mods: Command,       chars: "\x1c3"    }
-  - { key: Key4,     mods: Command,       chars: "\x1c4"    }
-  - { key: Key5,     mods: Command,       chars: "\x1c5"    }
-  - { key: Key6,     mods: Command,       chars: "\x1c6"    }
-  - { key: Key7,     mods: Command,       chars: "\x1c7"    }
-  - { key: Key8,     mods: Command,       chars: "\x1c8"    }
-  - { key: Key9,     mods: Command,       chars: "\x1c9"    }
+  - { key: i,        mods: Command,       chars: "\x02i"    } # go to previous tab
+  - { key: o,        mods: Command,       chars: "\x02o"    } # go to next tab
+  - { key: Key1,     mods: Command,       chars: "\x021"    } # go to tab 1..9
+  - { key: Key2,     mods: Command,       chars: "\x022"    }
+  - { key: Key3,     mods: Command,       chars: "\x023"    }
+  - { key: Key4,     mods: Command,       chars: "\x024"    }
+  - { key: Key5,     mods: Command,       chars: "\x025"    }
+  - { key: Key6,     mods: Command,       chars: "\x026"    }
+  - { key: Key7,     mods: Command,       chars: "\x027"    }
+  - { key: Key8,     mods: Command,       chars: "\x028"    }
+  - { key: Key9,     mods: Command,       chars: "\x029"    }
 
   # ----- rotate panes -----
-  - { key: r,       mods: Command,        chars: "\x1cr"    }
+  - { key: r,       mods: Command,        chars: "\x02r"    }
 
   # ----- max pane -----
   - { key: m,       mods: Command,        chars: "\x1cm"    }
