--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -28,8 +28,8 @@ set-window-option -g mode-keys vi
 # Start windows and panes at 1, not 0
 set-option -g base-index 1
 
-# Set C-\ as prefix
-set-option -g prefix C-\\
+# Set C-b as prefix
+set-option -g prefix C-b
 
 # Set default shell
 set-option -g default-shell /bin/bash
