--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -84,8 +84,8 @@ bind-key - splitw -v -c "#{pane_current_path}"
 # Enter copy mode by c, leave copy mode by q, movements and search in copy mode
 bind-key c copy-mode
 bind-key -T copy-mode-vi q send-keys -X cancel
-bind-key -T copy-mode-vi [ send-keys -X halfpage-up
-bind-key -T copy-mode-vi ] send-keys -X halfpage-down
+bind-key -T copy-mode-vi u send-keys -X halfpage-up
+bind-key -T copy-mode-vi d send-keys -X halfpage-down
 bind-key -T copy-mode-vi k send-keys -X scroll-up
 bind-key -T copy-mode-vi j send-keys -X scroll-down
 bind-key -T copy-mode-vi h send-keys -X cursor-left
