--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -45,7 +45,7 @@ set-option -g status-justify left
 
 set-option -g status-bg default
 set-option -g status-fg yellow
-set-option -g status-style bg=#282c34
+set-option -g status-style bg=#1a1d23
 
 set-option -g window-status-style bg=default,fg=grey
 set-option -g window-status-current-style bg=default,fg=orange
