--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -111,7 +111,7 @@ shell:
   args:
     - --login
     - -c
-    - "tmux new-session -A -D -s main"
+    - "zellij --layout ~/.config/zellij/layout.kdl"
 
 live_config_reload: true
 
@@ -124,7 +124,78 @@ live_config_reload: true
 # Alacritty + Tmux key integratio
 #   `\x02` is `C-b` as tmux prefix
 #   `\x1b` is `Esc`
+#key_bindings:
+#  - { key: H,        mods: Command,       action: None }
+#  - { key: Q,        mods: Command,       action: None }
+#
+#  # ----- change font size ----
+#  - { key: Key0,     mods: Command,       action: ResetFontSize    }
+#  - { key: Equals,   mods: Command,       action: IncreaseFontSize }
+#  - { key: Minus,    mods: Command,       action: DecreaseFontSize }
+#
+#  # ----- new pane/tab/window -----
+#  - { key: D,        mods: Command,       chars: "\x02="    } # new vertical pane with default shell
+#  - { key: D,        mods: Command|Shift, chars: "\x02-"    } # new vertical pane with commands menu
+#  - { key: N,        mods: Command,       chars: "\x02n"    } # new tab with default shell
+#
+#  # ----- close pane/tab/window -----
+#  - { key: W,        mods: Command,       chars: "\x02x"    } # close the pane
+#  - { key: W,        mods: Command|Shift, chars: "\x02X"    } # close the tab
+#  - { key: Q,        mods: Command,       chars: "\x02d"    } # close the window
+#
+#  # ----- copy mode -----
+#  - { key: Y,        mods: Command       , chars: "\x02c"   } # enter vi copy mode, and search from up to down
+#
+#  # ----- navigate panes -----
+#  - { key: H,        mods: Command,       chars: "\x02h"    } # go to the pane left
+#  - { key: J,        mods: Command,       chars: "\x02j"    } # go to the pane above
+#  - { key: K,        mods: Command,       chars: "\x02k"    } # go to the pane below
+#  - { key: L,        mods: Command,       chars: "\x02l"    } # go to the pane right
+#
+#  # ----- resize panes -----
+#  - { key: H,        mods: Command|Shift, chars: "\x02H"         } # resize the current pane left
+#  - { key: J,        mods: Command|Shift, chars: "\x02J"         } # resize the current pane above
+#  - { key: K,        mods: Command|Shift, chars: "\x02K"         } # resize the current pane below
+#  - { key: L,        mods: Command|Shift, chars: "\x02L"         } # resize the current pane right
+#  - { key: Left,     mods: Command|Shift, chars: "\x02\x1b[D"    }
+#  - { key: Down,     mods: Command|Shift, chars: "\x02\x1b[B"    }
+#  - { key: Up,       mods: Command|Shift, chars: "\x02\x1b[A"    }
+#  - { key: Right,    mods: Command|Shift, chars: "\x02\x1b[C"    }
+#
+#  # ----- navigate tabs -----
+#  - { key: i,        mods: Command,       chars: "\x02i"    } # go to previous tab
+#  - { key: o,        mods: Command,       chars: "\x02o"    } # go to next tab
+#  - { key: Key1,     mods: Command,       chars: "\x021"    } # go to tab 1..9
+#  - { key: Key2,     mods: Command,       chars: "\x022"    }
+#  - { key: Key3,     mods: Command,       chars: "\x023"    }
+#  - { key: Key4,     mods: Command,       chars: "\x024"    }
+#  - { key: Key5,     mods: Command,       chars: "\x025"    }
+#  - { key: Key6,     mods: Command,       chars: "\x026"    }
+#  - { key: Key7,     mods: Command,       chars: "\x027"    }
+#  - { key: Key8,     mods: Command,       chars: "\x028"    }
+#  - { key: Key9,     mods: Command,       chars: "\x029"    }
+#
+#  # ----- rotate panes -----
+#  - { key: r,       mods: Command,        chars: "\x02r"    }
+#
+#  # ----- max pane -----
+#  - { key: m,       mods: Command,        chars: "\x02m"    }
+#
+#  - { key: t,  mods: Command, action: CreateNewWindow }
+
+
+# Key bindings
+# A list with all available `key` names can be found here
+# https://docs.rs/glutin/*/glutin/enum.VirtualKeyCode.html#variants
+#
+# Run "xxd -psd" to find hex codes of keys.
+#
+# Alacritty + Zellij key integratio
+#   `\x02` is `C-b` as tmux prefix
+#   `\x19` is `C-y` as tmux prefix
+#   `\x1b` is `Esc`
 key_bindings:
+  # ----- unbind -----
   - { key: H,        mods: Command,       action: None }
   - { key: Q,        mods: Command,       action: None }
 
@@ -134,17 +205,14 @@ key_bindings:
   - { key: Minus,    mods: Command,       action: DecreaseFontSize }
 
   # ----- new pane/tab/window -----
-  - { key: D,        mods: Command,       chars: "\x02="    } # new vertical pane with default shell
-  - { key: D,        mods: Command|Shift, chars: "\x02-"    } # new vertical pane with commands menu
-  - { key: N,        mods: Command,       chars: "\x02n"    } # new tab with default shell
+  - { key: D,        mods: Command,       chars: "\x02%"    } # new vertical pane with default shell
+  - { key: D,        mods: Command|Shift, chars: "\x02\""    } # new vertical pane with commands menu
+  - { key: N,        mods: Command,       chars: "\x02c"    } # new tab with default shell
+  - { key: T,        mods: Command,       action: CreateNewWindow } # new alacritty
 
   # ----- close pane/tab/window -----
   - { key: W,        mods: Command,       chars: "\x02x"    } # close the pane
-  - { key: W,        mods: Command|Shift, chars: "\x02X"    } # close the tab
   - { key: Q,        mods: Command,       chars: "\x02d"    } # close the window
-
-  # ----- copy mode -----
-  - { key: Y,        mods: Command       , chars: "\x02c"   } # enter vi copy mode, and search from up to down
 
   # ----- navigate panes -----
   - { key: H,        mods: Command,       chars: "\x02h"    } # go to the pane left
@@ -153,18 +221,17 @@ key_bindings:
   - { key: L,        mods: Command,       chars: "\x02l"    } # go to the pane right
 
   # ----- resize panes -----
-  - { key: H,        mods: Command|Shift, chars: "\x02H"         } # resize the current pane left
-  - { key: J,        mods: Command|Shift, chars: "\x02J"         } # resize the current pane above
-  - { key: K,        mods: Command|Shift, chars: "\x02K"         } # resize the current pane below
-  - { key: L,        mods: Command|Shift, chars: "\x02L"         } # resize the current pane right
-  - { key: Left,     mods: Command|Shift, chars: "\x02\x1b[D"    }
-  - { key: Down,     mods: Command|Shift, chars: "\x02\x1b[B"    }
-  - { key: Up,       mods: Command|Shift, chars: "\x02\x1b[A"    }
-  - { key: Right,    mods: Command|Shift, chars: "\x02\x1b[C"    }
+  - { key: H,        mods: Command|Shift,   chars: "\x02H"    } # resize the current pane left
+  - { key: J,        mods: Command|Shift,   chars: "\x02J"    } # resize the current pane above
+  - { key: K,        mods: Command|Shift,   chars: "\x02K"    } # resize the current pane below
+  - { key: L,        mods: Command|Shift,   chars: "\x02L"    } # resize the current pane right
+  - { key: M,        mods: Command,         chars: "\x02z"    }
+  - { key: +,        mods: Command|Shift,   chars: "\x02+"    }
+  - { key: _,        mods: Command|Shift,  chars: "\x02_"    }
 
   # ----- navigate tabs -----
-  - { key: i,        mods: Command,       chars: "\x02i"    } # go to previous tab
-  - { key: o,        mods: Command,       chars: "\x02o"    } # go to next tab
+  - { key: i,        mods: Command,       chars: "\x02p"    } # go to previous tab
+  - { key: o,        mods: Command,       chars: "\x02n"    } # go to next tab
   - { key: Key1,     mods: Command,       chars: "\x021"    } # go to tab 1..9
   - { key: Key2,     mods: Command,       chars: "\x022"    }
   - { key: Key3,     mods: Command,       chars: "\x023"    }
@@ -175,12 +242,9 @@ key_bindings:
   - { key: Key8,     mods: Command,       chars: "\x028"    }
   - { key: Key9,     mods: Command,       chars: "\x029"    }
 
-  # ----- rotate panes -----
-  - { key: r,       mods: Command,        chars: "\x02r"    }
+  # ----- toggle floating panes -----
+  - { key: F,       mods: Command,        chars: "\x02f"    }
 
-  # ----- max pane -----
-  - { key: m,       mods: Command,        chars: "\x02m"    }
-
-  - { key: t,  mods: Command, action: CreateNewWindow }
-
+  # ------ vim mode ------
+  - { key: Y,       mods: Command,        chars: "\x19y"    }
 
